optimisation du responsive sur la partit desktop

--- a/index.html
+++ b/index.html
@@ -210,60 +210,66 @@
                         <span><i class="fas fa-chart-line"></i></span>
                     </div>
                     <div class="conteneur-card-populaire">
-                        <a href="#">
                             <div class="card-populaire">
-                                <img class="img-populaire" src="images/hebergements/hotellesoleil.jpg">
-                                <div class="accomodation-populaire">
-                                    <div class="accomodation-populaire-text">
-                                        <h4>Hotel le soleil du <br> matin</h4>
-                                        <p>Nuit à partir de <strong>128€</strong></p>
+                                <a class="lien-card-populaire" href="#">
+                                    <div class="conteneur-image-populaire">
+                                        <img class="img-populaire" src="images/hebergements/hotellesoleil.jpg">
                                     </div>
-                                    <div class="accomodation-populaire-etoile">
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                    <div class="accomodation-populaire">
+                                        <div class="accomodation-populaire-text">
+                                            <h4>Hotel le soleil du <br> matin</h4>
+                                            <p>Nuit à partir de <strong>128€</strong></p>
+                                        </div>
+                                        <div class="accomodation-populaire-etoile">
+                                            <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                            <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                            <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                            <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                            <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                        </div>
                                     </div>
-                                </div>
+                                </a>    
                             </div>
-                        </a>
-                        <a href="#">
                             <div class="card-populaire">
-                                <img class="img-populaire" src="images/hebergements/aucoeurdeleau.jpg">
-                                <div class="accomodation-populaire">
-                                    <div class="accomodation-populaire-text">
-                                        <h4>Au coeur de l'eau <br> Chambre d'hotes</h4>
-                                        <p>Nuit à partir de <strong>71€</strong></p>
+                                <a class="lien-card-populaire" href="#">
+                                    <div class="conteneur-image-populaire">
+                                        <img class="img-populaire" src="images/hebergements/aucoeurdeleau.jpg">
                                     </div>
-                                    <div class="accomodation-populaire-etoile">
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="uncolor"><i class="fas fa-star fa-xs"></i></span>
+                                    <div class="accomodation-populaire">
+                                        <div class="accomodation-populaire-text">
+                                            <h4>Au coeur de l'eau <br> Chambre d'hotes</h4>
+                                            <p>Nuit à partir de <strong>71€</strong></p>
+                                        </div>
+                                        <div class="accomodation-populaire-etoile">
+                                            <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                            <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                            <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                            <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                            <span class="uncolor"><i class="fas fa-star fa-xs"></i></span>
+                                        </div>
                                     </div>
-                                </div>
+                                </a>    
                             </div>
-                        </a>
-                        <a href="#">
                             <div class="card-populaire">
-                                <img class="img-populaire" src="images/hebergements/hoteltoutbleu.jpg">
-                                <div class="accomodation-populaire">
-                                    <div class="accomodation-populaire-text">
-                                        <h4>Hotel Tout bleu et <br> Blanc</h4>
-                                        <p>Nuit à partir de <strong>68€</strong></p>
-                                    </div>   
-                                    <div class="accomodation-populaire-etoile">
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="uncolor"><i class="fas fa-star fa-xs"></i></span>
+                                <a class="lien-card-populaire" href="#">
+                                    <div class="conteneur-image-populaire">
+                                        <img class="img-populaire" src="images/hebergements/hoteltoutbleu.jpg">
+                                    </div>    
+                                    <div class="accomodation-populaire">
+                                        <div class="accomodation-populaire-text">
+                                            <h4>Hotel Tout bleu et <br> Blanc</h4>
+                                            <p>Nuit à partir de <strong>68€</strong></p>
+                                        </div>   
+                                        <div class="accomodation-populaire-etoile">
+                                            <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                            <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                            <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                            <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                            <span class="uncolor"><i class="fas fa-star fa-xs"></i></span>
+                                        </div>
                                     </div>
-                                </div>
+                                </a>    
                             </div>
-                        </a>
                     </div>
                 </div>   
             </section>
