reponsive de la section hebergement pour mobile

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div> 
             <nav class="header-nav">  
     			    <a class="link" href="#hebergement">Hébergements</a>
-                    <a class="link" href="#activites">Activités</a>
+                    <a class="link" href="#activite">Activités</a>
                     <a class="register" href="#">S'inscire</a>
             </nav>
         </header>
@@ -217,7 +217,7 @@
                                     </div>
                                     <div class="accomodation-populaire">
                                         <div class="accomodation-populaire-text">
-                                            <h4>Hotel le soleil du <br> matin</h4>
+                                            <h4>Hotel le soleil du matin</h4>
                                             <p>Nuit à partir de <strong>128€</strong></p>
                                         </div>
                                         <div class="accomodation-populaire-etoile">
@@ -237,7 +237,7 @@
                                     </div>
                                     <div class="accomodation-populaire">
                                         <div class="accomodation-populaire-text">
-                                            <h4>Au coeur de l'eau <br> Chambre d'hotes</h4>
+                                            <h4>Au coeur de l'eau Chambre d'hotes</h4>
                                             <p>Nuit à partir de <strong>71€</strong></p>
                                         </div>
                                         <div class="accomodation-populaire-etoile">
@@ -253,13 +253,13 @@
                             <div class="card-populaire">
                                 <a class="lien-card-populaire" href="#">
                                     <div class="conteneur-image-populaire">
-                                        <img class="img-populaire" src="images/hebergements/hoteltoutbleu.jpg">
+                                        <img class="img-populaire img-hotel-tout-bleu" src="images/hebergements/hoteltoutbleu.jpg">
                                     </div>    
                                     <div class="accomodation-populaire">
                                         <div class="accomodation-populaire-text">
-                                            <h4>Hotel Tout bleu et <br> Blanc</h4>
+                                            <h4>Hotel Tout bleu et Blanc</h4>
                                             <p>Nuit à partir de <strong>68€</strong></p>
-                                        </div>   
+                                        </div>
                                         <div class="accomodation-populaire-etoile">
                                             <span class="color"><i class="fas fa-star fa-xs"></i></span>
                                             <span class="color"><i class="fas fa-star fa-xs"></i></span>
@@ -276,12 +276,12 @@
 
     <!--Partie Activiter de Reservia-->
             
-            <section class="activite" id="activites">
+            <section class="activite" id="activite">
                 <div class="titre-activiter">
                     <h3>Activite a Marseille</h3>
                 </div>
                 <div class="conteneur-activite">
-                    <a href="#">
+                    <a class="lien-activite" href="#">
                         <div class="child">
                             <div class="card-activite-large">
                                 <img class="img-large" src="images/activites/Vieux Port.jpg" alt="vieux port">
@@ -289,7 +289,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a class="lien-activite" href="#">
                         <div class="child2">
                                 <div class="card-activite">
                                     <img class="img-medium" src="images/activites/Fort de Pomègues.jpg" alt="Fort de Pomègues">
@@ -301,7 +301,7 @@
                                 </div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a class="lien-activite" href="#">
                         <div class="child">
                             <div class="card-activite-large">
                                 <img class="img-large" src="images/activites/Parc National des Calanques.jpg" alt="Parc National des Calanques">
@@ -309,7 +309,7 @@
                             </div>   
                         </div>
                     </a>
-                    <a href="#">
+                    <a class="lien-activite" href="#">
                         <div class="child2">
                             <div class="card-activite">
                                 <img class="img-small2" src="images/activites/Notre-Dame-de-la-Garde.jpg" alt="Notre-Dame-de-la-Garde">
