restructuration de la partit activiter

--- a/index.html
+++ b/index.html
@@ -281,49 +281,52 @@
                     <h3>Activite a Marseille</h3>
                 </div>
                 <div class="conteneur-activite">
-                    <a class="lien-activite" href="#">
-                        <div class="child">
+                    <div class="child-1">
+                        <a href="#">
                             <div class="card-activite-large">
                                 <img class="img-large" src="images/activites/Vieux Port.jpg" alt="vieux port">
                                 <p>Vieux Port</p>
                             </div>
-                        </div>
-                    </a>
-                    <a class="lien-activite" href="#">
-                        <div class="child2">
-                                <div class="card-activite">
-                                    <img class="img-medium" src="images/activites/Fort de Pomègues.jpg" alt="Fort de Pomègues">
-                                    <p>Fort de Pomègues</p>
-                                </div>
-                                <div class="card-activite">
-                                    <img class="img-small" src="images/activites/Îles du Frioul.jpg" alt="Îles du Frioul">
-                                    <p>Îles du Frioul</p>
-                                </div>
-                        </div>
-                    </a>
-                    <a class="lien-activite" href="#">
-                        <div class="child">
+                        </a>
+                    </div>
+                    <div class="child-2">
+                        <a href="#">
+                            <div class="card-activite-medium">
+                                <img class="img-medium" src="images/activites/Fort de Pomègues.jpg" alt="Fort de Pomègues">
+                                <p>Fort de Pomègues</p>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="card-activite-small">
+                                <img class="img-small" src="images/activites/Îles du Frioul.jpg" alt="Îles du Frioul">
+                                <p>Îles du Frioul</p>
+                            </div>
+                        </a>    
+                    </div>
+                    <div class="child-1">
+                        <a href="#">
                             <div class="card-activite-large">
                                 <img class="img-large" src="images/activites/Parc National des Calanques.jpg" alt="Parc National des Calanques">
                                 <p>Parc National des Calanques</p>
-                            </div>   
-                        </div>
-                    </a>
-                    <a class="lien-activite" href="#">
-                        <div class="child2">
-                            <div class="card-activite">
-                                <img class="img-small2" src="images/activites/Notre-Dame-de-la-Garde.jpg" alt="Notre-Dame-de-la-Garde">
+                            </div>
+                        </a>   
+                    </div>
+                    <div class="child-2">
+                        <a href="#">
+                            <div class="card-activite-same">
+                                <img class="img-same" src="images/activites/Notre-Dame-de-la-Garde.jpg" alt="Notre-Dame-de-la-Garde">
                                 <p>Notre-Dame-de-la-Garde</p>
                             </div>
-                            <div class="card-activite">
-                                <img class="img-small2" src="images/activites/Parc Longchamp.jpg" alt="Parc Longchamp">
+                        </a>
+                        <a href="#">
+                            <div class="card-activite-same">
+                                <img class="img-same" src="images/activites/Parc Longchamp.jpg" alt="Parc Longchamp">
                                 <p>Parc Longchamps</p>
                             </div>
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                 </div>
             </section>
-            
         </main>
         <footer>
             <div class="container-footer">
