finalisation de ma partit tablette

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav class="header-nav">  
     			    <a class="link" href="#hebergement">Hébergements</a>
                     <a class="link" href="#activite">Activités</a>
-                    <a class="register" href="#">S'inscire</a>
+                    <a class="register" href="#">S'inscrire</a>
             </nav>
         </header>
         <main>
@@ -330,21 +330,27 @@
         </main>
         <footer>
             <div class="container-footer">
-                <div class="footer-left">
+                <div class="content-footer">
                     <h3 class="footer-h3">À propos</h3>
-                    <a class="footer-a" href="#">Fonctionnement du site</a>
-                    <a class="footer-a" href="#">Conditions générales de vente</a>
-                    <a class="footer-a" href="#">Donnéees et confidentialité</a>
+                    <ul>
+                        <li><a class="footer-a" href="#">Fonctionnement du site</a></li>
+                        <li><a class="footer-a" href="#">Conditions générales de vente</a></li>
+                        <li><a class="footer-a" href="#">Donnéees et confidentialité</a></li>
+                    </ul>
                 </div>
-                <div class="footer-middle">
+                <div class="content-footer">
                     <h3 class="footer-h3">Nos hébergements</h3>
-                    <a class="footer-a" href="#">Charte qualité</a>
-                    <a class="footer-a" href="#">Soumettre votre hôtel</a>
+                    <ul>
+                        <li><a class="footer-a" href="#">Charte qualité</a></li>
+                        <li><a class="footer-a" href="#">Soumettre votre hôtel</a></li>
+                    </ul>
                 </div>
-                <div class="footer-right">
+                <div class="content-footer">
                     <h3 class="footer-h3">Assistance</h3>
-                    <a class="footer-a" href="#">Centre d'aide</a>
-                    <a class="footer-a" href="#">Nous contacter</a>
+                    <ul>
+                        <li><a class="footer-a" href="#">Centre d'aide</a></li>
+                        <li><a class="footer-a" href="#">Nous contacter</a></li>
+                    </ul>
                 </div>
             </div>
         </footer>
