correction des derniere erreur et warning du w3C pour html et css

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <section class="filtre">
                 <div class="conteneur-filtre">
                     <div class="block-text-filtre">
-                        <span>Filtre</span>
+                        <h3>Filtre</h3>
                     </div>
                     <div class="block-filtre">
                         <a href="#">
@@ -92,7 +92,7 @@
                     <i class="fas fa-info fa-xs"></i> 
                 </div>
                 <div class="block-info-text">
-                    <span>Plus de 500 logements sont disponibles dans cette ville</span>
+                    <h3>Plus de 500 logements sont disponibles dans cette ville</h3>
                 </div>
             </section>
         <!--Section hebergement incluant div block hebergement et div herbergement populaire-->               
@@ -104,7 +104,7 @@
                     <div class="conteneur-card-hebergement">
                         <div class="card-hebergement">
                             <a href="#">
-                                <img class="img-hebergement" src='images/hebergements/aubergelacannebiere.jpg'>
+                                <img class="img-hebergement" src='images/hebergements/aubergelacannebiere.jpg' alt="Auberge la cannebière">
                                 <div class="block-description">
                                     <h4>Auberge la cannebière</h4>
                                     <p>Nuit à partir de <strong>25€</strong></p>
@@ -120,7 +120,7 @@
                         </div>
                         <div class="card-hebergement">
                             <a href="#">
-                                <img class="img-hebergement" src='images/hebergements/hotelduport.jpg'>
+                                <img class="img-hebergement" src='images/hebergements/hotelduport.jpg' alt="Hotel du port">
                                 <div class="block-description">
                                     <h4>Hotel du port</h4>
                                     <p>Nuit à partir de <strong>52€</strong></p>
@@ -136,7 +136,7 @@
                         </div>
                         <div class="card-hebergement">
                             <a href="#">
-                                <img class="img-hebergement" src='images/hebergements/hotellesmouettes.jpg'>
+                                <img class="img-hebergement" src='images/hebergements/hotellesmouettes.jpg' alt="Hotel Les mouettes">
                                 <div class="block-description">
                                     <h4>Hotel Les mouettes</h4>
                                     <p>Nuit à partir de <strong>76€</strong></p>
@@ -152,7 +152,7 @@
                         </div>
                         <div class="card-hebergement">
                             <a href="#">
-                                <img class="img-hebergement" src='images/hebergements/hoteldelamer.jpg'>
+                                <img class="img-hebergement" src='images/hebergements/hoteldelamer.jpg' alt="Hotel de la mer">
                                 <div class="block-description">
                                     <h4>Hotel de la mer</h4>
                                     <p>Nuit à partir de <strong>46€</strong></p>
@@ -168,7 +168,7 @@
                         </div>
                         <div class="card-hebergement">
                             <a href="#">
-                                <img class="img-hebergement" src='images/hebergements/aubergelepanier.jpg'>
+                                <img class="img-hebergement" src='images/hebergements/aubergelepanier.jpg' alt="Auberge Le panier">
                                 <div class="block-description">
                                     <h4>Auberge Le panier</h4>
                                     <p>Nuit à partir de <strong>23€</strong></p>
@@ -184,7 +184,7 @@
                         </div>
                         <div class="card-hebergement">
                             <a href="#">
-                                <img class="img-hebergement" src='images/hebergements/hotelchezamina.jpg'>
+                                <img class="img-hebergement" src='images/hebergements/hotelchezamina.jpg' alt="Hotel chez Amina">
                                 <div class="block-description">
                                     <h4>Hotel chez Amina</h4>
                                     <p>Nuit à partir de <strong>96€</strong></p>
@@ -213,7 +213,7 @@
                             <div class="card-populaire">
                                 <a class="lien-card-populaire" href="#">
                                     <div class="conteneur-image-populaire">
-                                        <img class="img-populaire" src="images/hebergements/hotellesoleil.jpg">
+                                        <img class="img-populaire" src="images/hebergements/hotellesoleil.jpg" alt="Hotel le soleil du matin">
                                     </div>
                                     <div class="accomodation-populaire">
                                         <div class="accomodation-populaire-text">
@@ -233,7 +233,7 @@
                             <div class="card-populaire">
                                 <a class="lien-card-populaire" href="#">
                                     <div class="conteneur-image-populaire">
-                                        <img class="img-populaire" src="images/hebergements/aucoeurdeleau.jpg">
+                                        <img class="img-populaire" src="images/hebergements/aucoeurdeleau.jpg" alt="Au coeur de l'eau Chambre d'hotes">
                                     </div>
                                     <div class="accomodation-populaire">
                                         <div class="accomodation-populaire-text">
@@ -253,7 +253,7 @@
                             <div class="card-populaire">
                                 <a class="lien-card-populaire" href="#">
                                     <div class="conteneur-image-populaire">
-                                        <img class="img-populaire img-hotel-tout-bleu" src="images/hebergements/hoteltoutbleu.jpg">
+                                        <img class="img-populaire img-hotel-tout-bleu" src="images/hebergements/hoteltoutbleu.jpg" alt="Hotel Tout bleu et Blanc">
                                     </div>    
                                     <div class="accomodation-populaire">
                                         <div class="accomodation-populaire-text">
@@ -284,7 +284,7 @@
                     <div class="child-1">
                         <a href="#">
                             <div class="card-activite-large">
-                                <img class="img-large" src="images/activites/Vieux Port.jpg" alt="vieux port">
+                                <img class="img-large" src="images/activites/VieuxPort.jpg" alt="vieux port">
                                 <p>Vieux Port</p>
                             </div>
                         </a>
@@ -292,13 +292,13 @@
                     <div class="child-2">
                         <a href="#">
                             <div class="card-activite-medium">
-                                <img class="img-medium" src="images/activites/Fort de Pomègues.jpg" alt="Fort de Pomègues">
+                                <img class="img-medium" src="images/activites/FortdePomègues.jpg" alt="Fort de Pomègues">
                                 <p>Fort de Pomègues</p>
                             </div>
                         </a>
                         <a href="#">
                             <div class="card-activite-small">
-                                <img class="img-small" src="images/activites/Îles du Frioul.jpg" alt="Îles du Frioul">
+                                <img class="img-small" src="images/activites/ÎlesduFrioul.jpg" alt="Îles du Frioul">
                                 <p>Îles du Frioul</p>
                             </div>
                         </a>    
@@ -306,7 +306,7 @@
                     <div class="child-1">
                         <a href="#">
                             <div class="card-activite-large">
-                                <img class="img-large" src="images/activites/Parc National des Calanques.jpg" alt="Parc National des Calanques">
+                                <img class="img-large" src="images/activites/ParcNationaldesCalanques.jpg" alt="Parc National des Calanques">
                                 <p>Parc National des Calanques</p>
                             </div>
                         </a>   
@@ -320,7 +320,7 @@
                         </a>
                         <a href="#">
                             <div class="card-activite-same">
-                                <img class="img-same" src="images/activites/Parc Longchamp.jpg" alt="Parc Longchamp">
+                                <img class="img-same" src="images/activites/ParcLongchamp.jpg" alt="Parc Longchamp">
                                 <p>Parc Longchamps</p>
                             </div>
                         </a>
