modification desktop apres review de mon mentor

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <p>En plein centre ville ou en pleine nature</p> 
                 </div>
                 <div class="search">
-                    <div class="icon-left"><i class="fas fa-map-marker-alt fa-xs"></i></div>  
+                    <div class="icon-left"><i class="fas fa-map-marker-alt"></i></div>  
                     <input class="searchbar" type="search" id="search-bar" name="q" placeholder="Marseille,France">
                     <div class="icon-right"><a href="#">Rechercher</a></div>
                     <div class="icon-right-mobile"><a href="#"><i class="fas fa-search fa-xs"></i></a></div>
@@ -42,7 +42,7 @@
             <section class="filtre">
                 <div class="conteneur-filtre">
                     <div class="block-text-filtre">
-                        <h3>Filtre</h3>
+                        <h3>Filtres</h3>
                     </div>
                     <div class="block-filtre">
                         <a href="#">
@@ -278,7 +278,7 @@
             
             <section class="activite" id="activite">
                 <div class="titre-activiter">
-                    <h3>Activite a Marseille</h3>
+                    <h3>Activités a Marseille</h3> 
                 </div>
                 <div class="conteneur-activite">
                     <div class="child-1">
@@ -330,7 +330,7 @@
         </main>
         <footer>
             <div class="container-footer">
-                <div class="content-footer">
+                <div class="content-footer-left">
                     <h3 class="footer-h3">À propos</h3>
                     <ul>
                         <li><a class="footer-a" href="#">Fonctionnement du site</a></li>
